--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d client/dist",
     "start": "webpack --mode=development -w",
     "dev": "webpack serve --open",
     "server": "node server/index.js -w"
