--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inkgen",
-  "homepage": "https://ryananger.github.io/inkgen",
+  "homepage": "https://gen.inkvessels.art",
   "version": "0.0.1",
   "description": "",
   "author": "Ry Scott",
